organizacion de codigo
